# meshToolbox

./: CMakeLists.txt  README.md
data/: CUBE.obj.mtl  CUBE.obj.old  CUBE.ply  TESTC1.mtl
include/: meshAnalize.h  meshAnalyze.h  objLoad.h
src/: meshAnalyze.cpp  objLoad.cpp
